--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+	@apply font-poppins w-full h-full;
+}
+
+@layer utilities {
+	/* css flex */
+	.flex-center {
+		@apply flex items-center justify-center;
+	}
+	.button-size {
+		@apply px-5 ipad:px-8 py-2 ipad:py-2.5 text-[10px] mobile:text-[11px] ipad:text-xs;
+	}
+	.form-input {
+		@apply px-3 py-2 text-xs rounded-lg;
+	}
+}
