--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
 body {
 	@apply font-poppins w-full h-full;
+	font-family: 'Poppins', sans-serif;
+	padding-top: 4rem;
 }
 
 @layer utilities {
@@ -18,4 +20,53 @@ body {
 	.form-input {
 		@apply px-3 py-2 text-xs rounded-lg;
 	}
+}
+
+nav a.active {
+	background: linear-gradient(
+		90deg,
+		rgba(14, 36, 52, 1) 0%,
+		rgba(38, 100, 145, 1) 42%,
+		rgba(38, 100, 144, 1) 42%,
+		rgba(41, 106, 154, 1) 100%
+	);
+
+	font-size: 1.2rem;
+	color: #fff;
+}
+
+.hide {
+	opacity: 0;
+	visibility: hidden;
+	transition:
+		opacity 1s ease,
+		visibility 1s ease;
+}
+
+.show {
+	opacity: 1;
+	visibility: visible;
+	transition:
+		opacity 1s ease,
+		visibility 1s ease;
+}
+
+.hero_background_image {
+	background-image: url('../src/assets/heroe_image_background.png');
+	background-size: contain;
+	background-position: bottom;
+	background-repeat: no-repeat;
+}
+
+.hero_image {
+	background-image: url('../src/assets/heroe_image.png');
+	background-size: contain;
+	background-position: bottom;
+	background-repeat: no-repeat;
+}
+
+.bg-contactImage {
+	background-image: url('../src/assets/contact.png');
+	background-size: cover;
+	background-position: center;
 }
