--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,36 @@ nav a.active {
 }
 
 /* h-[89.6px] */
+@layer utilities {
+	/* css flex */
+	.sidebar-item {
+		@apply flex h-[89.6px] items-center px-[9%] gap-7 text-[19px]  font-semibold;
+	}
+}
+
+.pagination {
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
+	list-style-type: none;
+	align-items: center;
+}
+
+.pagination li {
+	margin: 0 5px;
+	cursor: pointer;
+	padding: 5px 10px;
+	border-radius: 5px;
+	background: transparent;
+}
+
+.pagination li.active {
+	background-color: #256490;
+	color: white;
+	border-radius: 100%;
+	width: 50px;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
